initialise LS and handle button clicks

--- a/index.html
+++ b/index.html
@@ -17,93 +17,87 @@
   <body>
     <header class="header">Weather Dashboard</header>
 
-    <main class="main">
-      <section class="search-history-container">
-        <div class="search-container">
-          <form class="select-city">
-            <input class="input-city" placeholder="Select a City" />
-            <button class="search-button" type="submit">Search</button>
-          </form>
-        </div>
-
-        <div class="search-history">
-          <div><button class="city-button" type="submit">Kyoto</button></div>
-          <div>
-            <button class="city-button" type="submit">Rio de Janeiro</button>
-          </div>
-          <div>
-            <button class="city-button" type="submit">Cape Town</button>
-          </div>
-        </div>
+    <main id="main">
+      <section id="search-history-container">
+        <!-- <div id="search-container"> -->
+        <form id="select-city">
+          <input id="input-city" placeholder="Select a City" />
+          <button id="search-button" type="submit">Search</button>
+        </form>
+        <!-- </div> -->
       </section>
 
-      <section class="weather-container">
+      <section id="weather-container">
         <div class="current-weather">
           <img class="weather-icon" src="assets/images/sun.png" />
           <div class="current-weather-info">
-            <h1>City Name</h1>
+            <h1>City Name 12345678</h1>
             <h2>dd/mmm/yyyy</h2>
-            <p>Temperature:</p>
-            <p>Wind: mph</p>
-            <p>Humidity: %</p>
-            <p id="indexUV">UV index:</p>
+            <p>Temperature: <span>80</span></p>
+            <p>Wind: <span>mph</span></p>
+            <p>Humidity: <span>%</span></p>
+            <p id="indexUV">UV index: <span>high</span></p>
           </div>
         </div>
 
-        <div class="forecast-container">
+        <div id="forecast-container">
           <div class="forecast">
             <div>
               <img class="small-weather-icon" src="assets/images/sun.png" />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
-              <p>Temperature:</p>
-              <p>Wind: mph</p>
-              <p>Humidity: %</p>
+              <p>Temperature: <span>80</span></p>
+              <p>Wind: <span>mph</span></p>
+              <p>Humidity: <span>%</span></p>
             </div>
           </div>
+
           <div class="forecast">
             <div>
               <img class="small-weather-icon" src="assets/images/sun.png" />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
-              <p>Temperature:</p>
-              <p>Wind: mph</p>
-              <p>Humidity: %</p>
+              <p>Temperature: <span>80</span></p>
+              <p>Wind: <span>mph</span></p>
+              <p>Humidity: <span>%</span></p>
             </div>
           </div>
+
           <div class="forecast">
             <div>
               <img class="small-weather-icon" src="assets/images/sun.png" />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
-              <p>Temperature:</p>
-              <p>Wind: mph</p>
-              <p>Humidity: %</p>
+              <p>Temperature: <span>80</span></p>
+              <p>Wind: <span>mph</span></p>
+              <p>Humidity: <span>%</span></p>
             </div>
           </div>
+
           <div class="forecast">
             <div>
               <img class="small-weather-icon" src="assets/images/sun.png" />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
-              <p>Temperature:</p>
-              <p>Wind: mph</p>
-              <p>Humidity: %</p>
+              <p>Temperature: <span>80</span></p>
+              <p>Wind: <span>mph</span></p>
+              <p>Humidity: <span>%</span></p>
             </div>
           </div>
+
           <div class="forecast">
             <div>
               <img class="small-weather-icon" src="assets/images/sun.png" />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
-              <p>Temperature:</p>
-              <p>Wind: mph</p>
-              <p>Humidity: %</p>
+              <p>Temperature: <span>80</span></p>
+              <p>Wind: <span>mph</span></p>
+              <p>Humidity: <span>%</span></p>
             </div>
           </div>
         </div>
