UV color coding

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Temperature: <span>80</span></p>
             <p>Wind: <span>mph</span></p>
             <p>Humidity: <span>%</span></p>
-            <p id="indexUV">UV index: <span>high</span></p>
+            <p id="indexUV">UV index: <span class="highUV">high</span></p>
           </div>
         </div>
 
