experiment with rendering weather

--- a/index.html
+++ b/index.html
@@ -28,22 +28,28 @@
       </section>
 
       <section id="weather-container">
-        <div class="current-weather">
-          <img class="weather-icon" src="assets/images/sun.png" />
+        <!-- <div class="current-weather">
+          <img
+            class="weather-icon"
+            src="http://openweathermap.org/img/wn/04d@4x.png"
+          />
           <div class="current-weather-info">
             <h1>City Name 12345678</h1>
             <h2>dd/mmm/yyyy</h2>
-            <p>Temperature: <span>80</span></p>
+            <p>Temperature: <span>80&deg;C</span></p>
             <p>Wind: <span>mph</span></p>
             <p>Humidity: <span>%</span></p>
             <p id="indexUV">UV index: <span class="highUV">high</span></p>
           </div>
-        </div>
+        </div> -->
 
         <div id="forecast-container">
-          <div class="forecast">
+          <!-- <div class="forecast">
             <div>
-              <img class="small-weather-icon" src="assets/images/sun.png" />
+              <img
+                class="small-weather-icon"
+                src="http://openweathermap.org/img/w/04d.png"
+              />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
@@ -55,7 +61,10 @@
 
           <div class="forecast">
             <div>
-              <img class="small-weather-icon" src="assets/images/sun.png" />
+              <img
+                class="small-weather-icon"
+                src="http://openweathermap.org/img/w/04d.png"
+              />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
@@ -67,7 +76,10 @@
 
           <div class="forecast">
             <div>
-              <img class="small-weather-icon" src="assets/images/sun.png" />
+              <img
+                class="small-weather-icon"
+                src="http://openweathermap.org/img/w/04d.png"
+              />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
@@ -79,7 +91,10 @@
 
           <div class="forecast">
             <div>
-              <img class="small-weather-icon" src="assets/images/sun.png" />
+              <img
+                class="small-weather-icon"
+                src="http://openweathermap.org/img/w/04d.png"
+              />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
@@ -91,7 +106,10 @@
 
           <div class="forecast">
             <div>
-              <img class="small-weather-icon" src="assets/images/sun.png" />
+              <img
+                class="small-weather-icon"
+                src="http://openweathermap.org/img/w/04d.png"
+              />
             </div>
             <div class="forecast-weather-info">
               <h2>dd/mmm</h2>
@@ -99,7 +117,7 @@
               <p>Wind: <span>mph</span></p>
               <p>Humidity: <span>%</span></p>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
