debugging api fetch

--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
 
     <main id="main">
       <section id="search-history-container">
-        <!-- <div id="search-container"> -->
         <form id="select-city">
           <input id="input-city" placeholder="Select a City" />
           <button id="search-button" type="submit">Search</button>
         </form>
-        <!-- </div> -->
+        <div id="search-history"></div>
       </section>
 
       <section id="weather-container">
-        <!-- <div class="current-weather">
-          <img
+        <!-- <div class="current-weather"> -->
+        <!-- <img
             class="weather-icon"
             src="http://openweathermap.org/img/wn/04d@4x.png"
           />
@@ -40,11 +39,11 @@
             <p>Wind: <span>mph</span></p>
             <p>Humidity: <span>%</span></p>
             <p id="indexUV">UV index: <span class="highUV">high</span></p>
-          </div>
-        </div> -->
+          </div> -->
+        <!-- </div> -->
 
-        <div id="forecast-container">
-          <!-- <div class="forecast">
+        <!-- <div id="forecast-container"> -->
+        <!-- <div class="forecast">
             <div>
               <img
                 class="small-weather-icon"
@@ -118,7 +117,7 @@
               <p>Humidity: <span>%</span></p>
             </div>
           </div> -->
-        </div>
+        <!-- </div> -->
       </section>
     </main>
     <footer class="footer">
