remove duplicates from recent search click and render more efficiently

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 
         <!-- </div> -->
 
-        <!-- <div id="forecast-container"> -->
-
-        <!-- </div> -->
+        <!-- <div id="forecast-container"></div> -->
       </section>
     </main>
     <footer class="footer">
