final layout changes and screenshots to readme

--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
         <div id="search-history"></div>
       </section>
 
-      <section id="weather-container">
-        <!-- <div class="current-weather"> -->
-
-        <!-- </div> -->
-
-        <!-- <div id="forecast-container"></div> -->
-      </section>
+      <section id="weather-container"></section>
     </main>
     <footer class="footer">
       <i class="fa-solid fa-crown"></i> Created by C-Sim &copy 2022
